# cloud-mesh

./: .gitignore  Dockerfile  README.md  build.sh  check.sh  clusterrole.yaml  clusterrolebinding.yaml  config-bdp.toml  config-template.toml  config.toml  delete_clusters.sh  deploy.sh  diagram.md  enqueue.py  hks_parameters.toml  kube-task-prediction.yml  kube-task.yml  kube-task.yml.tpl  make_cluster.sh  pyproject.toml  run_single.py  teardown.sh  test_kube.py  test_run_docker.sh  update_script.sh  worker.py
runners/: approach_comparisons.py  cloud_morphology_features.py  cloud_morphology_features_caged.py  condensed_features_latest.py  condensed_features_latest_smart.py  condensed_features_multiscale.py  dfts_and_inference.py  extract_features_latest.py  features_latest.py  inference.py  predict_synapse_compartments_2024-11-07.py  predict_synapse_compartments_another-osprey-repeat.py  predict_synapse_compartments_obtuse-dog-search.py  prediction_on_synapses.py
src/cloud_mesh/: __init__.py  cloud_morphology.py  morphsync.py  pyvista.py  tensorstore.py
