[project]
dependencies = [
    "cave-mapper",
    "caveclient>=7.2.1",
    "cloud-files>=4.27.0",
    "cloud-volume>=11.0.2",
    "cloudigo",
    "fast-simplification>=0.1.7",
    "joblib>=1.4.2",
    "meshmash",
    "nglui>=3.7.2",
    "scikit-learn==1.6.1",
    "task-queue>=2.14.0",
    "toml>=0.10.2",
]
name = "cloud-mesh"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[tool.uv.sources]
cloudigo = { path = "../cloudigo", editable = true }
cave-mapper = { path = "../cave-mapper", editable = true }
meshmash = { path = "../meshmash", editable = true }
