[project]
dependencies = [
    "caveclient[cv]>=8.0.1",
    "cloud-files>=4.27.0",
    "cloud-volume>=12.12.0",
    "meshmash>=0.1.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "task-queue>=2.14.0",
]
name = "cloud-mesh"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
